=========
Changelog
=========

1.68.3
======

* Add 'nbz-rfxcomrx' as compliant xPL client (this is the xpl-perl library)
* Doc upgrade for open close sensors

1.68.2
======

* New feature : lighting 2 (type 11) : AC, HomeEasy EU, ANSLUT. AC is the protocol used by different brands with units having a learning mode button: KlikAanKlikUit, NEXA, CHACON, HomeEasy UK.

  * Switches
  * Open/close windows and doors sensors

* Upgrade devices detection to be Domogik 0.4.1 compliant.

1.68.1
======

* New feature : temperature sensors (type 50)

1.68.0
======

* Plugin reboot for Domogik 0.4
* The second number of the plugin release will now be the compliant firmware
* Only one feature in the plugin currently : temperature and hygro sensors (type 52)


0.1
===

* Plugin creation
