@@ -1,0 +1,7 @@
+def from_normal_panic_to_DT_Switch(x):
+    # normal - panic translated to 0 - 1
+    if x == "normal":
+        return 0
+    else:
+        return 1
+
