@@ -1,0 +1,51 @@
+{
+    "history" : [
+                    { "description" : "bad data (as this happens on startup)",
+                      "action" : "data-hex", 
+                      "data" : "61"
+                    },
+                    { "description" : "bad data (as this happens on startup)",
+                      "action" : "data-hex", 
+                      "data" : "0d"
+                    },
+                    { "description" : "wait",
+                      "action" : "wait", 
+                      "delay" : 5
+                    },
+                    { "description" : "status of the rfxcom",
+                      "action" : "data-hex", 
+                      "data" : "010001025344000c2f00000000"
+                    },
+                    { "description" : "wait",
+                      "action" : "wait", 
+                      "delay" : 5
+                    }
+                ],
+    "responses" : {},
+    "loop" : [
+                    { "description" : "length of the next message",
+                      "action" : "data-hex", 
+                      "data" : "08"
+                    },
+                    { "description" : "smoke sensor : test button",
+                      "action" : "data-hex", 
+                      "data" : "200325b67e000650"
+                    },
+                    { "description" : "wait",
+                      "action" : "wait", 
+                      "delay" : 5
+                    },
+                    { "description" : "length of the next message",
+                      "action" : "data-hex", 
+                      "data" : "08"
+                    },
+                    { "description" : "smoke sensor : test button",
+                      "action" : "data-hex", 
+                      "data" : "20004DD3DC540089"
+                    },
+                    { "description" : "wait",
+                      "action" : "wait", 
+                      "delay" : 5
+                    }
+              ]
+}
