@@ -5,6 +5,7 @@ Changelog
 1.68.3
 ======
 
+* Add support for KD-101 smoke sensors (Chacon, ...). No battery support :(
 * Add 'nbz-rfxcomrx' as compliant xPL client (this is the xpl-perl library)
 * Doc upgrade for open close sensors
 
